# lda

./: Dockerfile  app.py  pyproject.toml
aws/: dynamodb_connector.py  tables_schemas.py
aws/repositories/: exchange_repository.py  exchanges_stats_repository.py  generic_repository.py  platform_repository.py  token_repository.py  token_stats_repository.py
aws/repositories/__pycache__/: exchange_repository.cpython-313.pyc.2726784998768  exchanges_stats_repository.cpython-313.pyc.2106654490096  exchanges_stats_repository.cpython-313.pyc.2106657019424  exchanges_stats_repository.cpython-313.pyc.2655449295264  token_repository.cpython-313.pyc.2726787524016  token_stats_repository.cpython-313.pyc.2276733414416  token_stats_repository.cpython-313.pyc.2513629176192  token_stats_repository.cpython-313.pyc.2596628021504  token_stats_repository.cpython-313.pyc.2655451162000
configs/: config.py
models/: exchanges.py  exchanges_stats.py  platform.py  token_stats.py  tokens.py
scheduler/: scheduler.py  tasks.py
services/: coingecko.py
tests/: test_coingecko_sdk.py
views/: dashboard.py  status_control.py
